# multi-provider-resume-extractor

./: .env.example  .gitignore  BENCHMARK.md  BUILD-LOG.md  CLAUDE.md  README.md  pyproject.toml
eval/: README.md  REPORT.md  latency.json  latency.py  run_eval.py
eval/gold/: syn_a.json  syn_b.json  syn_c.json  syn_d.json
eval/gold_pdf/: clean_resumes_sample2.json  clean_resumes_sample3.json  colored_iconfonts_resume_sample1.json  multi_column_resume_sample2.json
eval/text_resumes/: syn_a.txt  syn_b.txt  syn_c.txt  syn_d.txt
src/resume_extractor/: __init__.py  __main__.py  caching.py  cli.py  config.py  costs.py  extract.py  ingest.py  providers.py  reliability.py  sanity.py  schema.py  scoring.py
tests/: live_utils.py  test_costs.py  test_extraction.py  test_pdf_ingestion.py  test_providers.py  test_reliability.py  test_sanity.py  test_schema.py  test_scoring.py
tests/data/: sample_resume.txt
tests/sample_resumes/: CREDITS.md  README.md
