[project]
name = "resume-extractor"
version = "0.1.0"
description = "Typed multi-provider LLM client + resume extractor (Phase 2 portfolio build)"
readme = "README.md"
authors = [
    { name = "Muhammad Abdullah", email = "muh.abdullah456@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "google-genai>=2.8.0",
    "instructor[google-genai]>=1.15.3",
    "litellm>=1.89.2",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
]

[project.scripts]
resume-extractor = "resume_extractor.cli:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I"]  # import sorting
